--- a/AdventOfCode22/AdventOfCode22.csproj
+++ b/AdventOfCode22/AdventOfCode22.csproj
@@ -10,6 +10,7 @@
     <ItemGroup>
         <None Update="Day1/input.txt" CopyToOutputDirectory="PreserveNewest" />
         <None Update="Day2/input.txt" CopyToOutputDirectory="PreserveNewest" />
+        <None Update="Day3/input.txt" CopyToOutputDirectory="PreserveNewest" />
     </ItemGroup>
 
 </Project>
