--- a/AdventOfCode22/AdventOfCode22.csproj
+++ b/AdventOfCode22/AdventOfCode22.csproj
@@ -11,6 +11,7 @@
         <None Update="Day1/input.txt" CopyToOutputDirectory="PreserveNewest" />
         <None Update="Day2/input.txt" CopyToOutputDirectory="PreserveNewest" />
         <None Update="Day3/input.txt" CopyToOutputDirectory="PreserveNewest" />
+        <None Update="Day4/input.txt" CopyToOutputDirectory="PreserveNewest" />
     </ItemGroup>
 
 </Project>
